# api-fastapi

./: .env.docker  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
docs/: DEVELOPMENT.md
migrations/: env.py
migrations/versions/: 92cc4760c86a_new_models.py  c6b8a3eedae4_new_relationship.py
src/: main.py  requirements.txt
src/app/reservations/: controller.py  model.py  repository.py  routes.py
src/app/rooms/: controller.py  model.py  repository.py  routes.py
src/app/rooms/controller/: room_controller.py
src/app/rooms/repository/: room_repository.py
src/app/token/: routes.py
src/config/: swagger_configuration.py
src/plugins/: __init__.py  load_models.py  load_routes.py
src/shared/abstract/: __init__.py  abstract_repository.py  repository_class.py
src/shared/classes/: __init__.py  declarative_base.py
src/shared/repository/: __init__.py  mongo_repository.py  postgres_repository.py
src/tests/: conftest.py  test_reservation_routes.py  test_rooms_routes.py  test_root.py
src/tests/health/: test_root.py
src/tests/rooms/: test_get_room_availability.py  test_get_rooms.py  test_post_room.py
