[project]
name = "api-fastapi"
version = "0.0.1"
description = "A Small FastAPI based API"
authors = [
    {name = "MarcelFox",email = "marcelfox@live.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ruff (>=0.9.5,<0.10.0)",
    "isort (>=6.0.0,<7.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "pytest-xdist (>=3.6.1,<4.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false